testing settings dynamic reload

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  font-family: helvetica;
+}
+
+div.box {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 4px;
+  margin: 4px;
+}
+
+a.btn {
+  border: 1px solid #ccf;
+  background: #eef;
+  border-radius: 5px;
+  padding: 2px;
+}
